# DatabaseProjects

./: .gitignore  README.md
project1/: .gitignore  AccuracyCheck.sql  AccuracyCheckForRawData.sql  AccuracyCheckForRevisedDatabase.sql  BuildDatabase.sql  README.md  mysql.sql  raw.sql
project1/Cpp/: CMakeLists.txt  data.sh  load.ps1  load.sh  mysql.sh  mysqlclient.sh  postgres.sh  postgresclient.sh  remote.sh  setup.ps1  setup.sh  speed.sh
project1/Cpp/src/: copy.cpp  dataonly.cpp  fakedata.cpp  json2csv.hpp  main.cpp  mysql.cpp  postgres.cpp  prilimiary.cpp  priliminary.cpp  speed.cpp
project1/Data/: cards.json  lines.json  passenger.json  passengers.json  stations.json
project1/Diagram/: DrawER.ipynb  SubwaySystemERDiagram1  adjusted_er_diagram  classical_er_diagram  metro_system_er_diagram
project1/Python/: .env  fakeData.py  loadByPython.ipynb  project.md  requirements.txt  test.ipynb
project1/SQL/: ReformatDatabase.sql  mysql.sql  raw.sql
project2/: Price.xlsx  README.md  Test.ipynb  backendTest.ipynb  frontend.ipynb  frontendTest.ipynb  graph.pkl  launch.py  requirements.txt  ~$Price.xlsx
project2/backend/: crud.py  database.py  models.py  schemas.py
project2/data/: BusOrder.csv  bus_line_details.csv  bus_lines.csv  bus_lines.txt  bus_stations.csv  card_rides.csv  cards.csv  line_details.csv  lines.csv  load.sh  passengers.csv  price.csv  price_duplicated.csv  shenzhen_metro.csv  stations.csv  txt2csv.py
project2/data/raw/: Shenzhen Bus Routes Feb 2022.xlsx
project2/frontend/: aniv.ipynb  test2.py
